# csv-to-clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md  csv-to-clipboard.desktop
arch/: PKGBUILD
src/: main.rs
wix/: main.wxs
