[package]
name = "rust-clipboardy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
# tsv = "0.1.1"
clipboard = "0.5.0"

# [dependencies.windows]
# version = "0.28.0"
# features = [
#     "alloc",
#     "Data_Xml_Dom",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_System_Threading",
#     "Win32_UI_WindowsAndMessaging",
# ]

