[package]
name = "csv-to-clipboard"
version = "1.0.0"
edition = "2021"
authors = ["Mathieu Fenniak <mathieu@fenniak.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
clipboard = "0.5.0"
anyhow = "1.0.52"
thiserror = "1.0"
notify-rust = "4"
